[package]
name = "sa-token-kubeconfig-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
k8s-openapi = { version = "0.16.0", features = ["v1_20"] }
kube = { version = "0.77.0", features = ["derive", "config"] }
secrecy = "0.8.0"
serde_yaml = "0.9.16"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
